# SocketsClientServer

./: CMakeCache.txt  CMakeLists.txt  Makefile  Protokoll.txt  client  client.cpp  server  server.cpp
